LDEV-6439 PageContextImpl pathList/includePathList/udfs LinkedList → ArrayList